{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 712,
  "lineage": "468371a9-5482-d8de-7117-76cb44633e5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "shinjuku_tgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:transit-gateway/tgw-0372e6a6b4b4da24b",
            "association_default_route_table_id": "tgw-rtb-0a5bf5f4167f1a75f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "shinjuku-tgw01: Tokyo hub for cross-region PHI corridor",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-0372e6a6b4b4da24b",
            "multicast_support": "disable",
            "owner_id": "975598471165",
            "propagation_default_route_table_id": "tgw-rtb-0a5bf5f4167f1a75f",
            "region": "ap-northeast-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "shinjuku-tgw01",
              "Region": "ap-northeast-1",
              "Role": "hub"
            },
            "tags_all": {
              "Name": "shinjuku-tgw01",
              "Region": "ap-northeast-1",
              "Role": "hub"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "shinjuku_tgw_peering01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:transit-gateway-attachment/tgw-attach-001ca2046d97cf069",
            "id": "tgw-attach-001ca2046d97cf069",
            "peer_account_id": "975598471165",
            "peer_region": "sa-east-1",
            "peer_transit_gateway_id": "tgw-055c4115682138ae5",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "shinjuku-tgw-peering-to-saopaulo01",
              "Side": "requester"
            },
            "tags_all": {
              "Name": "shinjuku-tgw-peering-to-saopaulo01",
              "Side": "requester"
            },
            "transit_gateway_id": "tgw-0372e6a6b4b4da24b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.shinjuku_tgw01",
            "data.aws_caller_identity.shinjuku_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "shinjuku_tgw_route_to_saopaulo01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.200.0.0/16",
            "id": "tgw-rtb-0a5bf5f4167f1a75f_10.200.0.0/16",
            "region": "ap-northeast-1",
            "transit_gateway_attachment_id": "tgw-attach-001ca2046d97cf069",
            "transit_gateway_route_table_id": "tgw-rtb-0a5bf5f4167f1a75f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.shinjuku_tgw01",
            "aws_ec2_transit_gateway_peering_attachment.shinjuku_tgw_peering01",
            "data.aws_caller_identity.shinjuku_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "shinjuku_tgw_vpc_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:transit-gateway-attachment/tgw-attach-031dad7a86e912836",
            "dns_support": "enable",
            "id": "tgw-attach-031dad7a86e912836",
            "ipv6_support": "disable",
            "region": "ap-northeast-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-tgw-vpc-attach01"
            },
            "tags_all": {
              "Name": "shinjuku-tgw-vpc-attach01"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0372e6a6b4b4da24b",
            "vpc_id": "vpc-0b9de40ee844fa645",
            "vpc_owner_id": "975598471165"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.shinjuku_tgw01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "shinjuku_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aebba8661d707e8",
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:elastic-ip/eipalloc-01aebba8661d707e8",
            "association_id": "eipassoc-028f86f8f123baebd",
            "domain": "vpc",
            "id": "eipalloc-01aebba8661d707e8",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0fd79a7dbdecdf496",
            "private_dns": "ip-10-100-1-62.ap-northeast-1.compute.internal",
            "private_ip": "10.100.1.62",
            "public_dns": "ec2-13-192-191-200.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.192.191.200",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-nat-eip01"
            },
            "tags_all": {
              "Name": "shinjuku-final-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shinjuku_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-088b486f20fab3f0e",
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:instance/i-0471e6059c97cf2e5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "shinjuku-final-instance-profile01",
            "id": "i-0471e6059c97cf2e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ee1ff13347da52ce"
              }
            ],
            "primary_network_interface_id": "eni-0ee1ff13347da52ce",
            "private_dns": "ip-10-100-101-218.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.101.218",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-083d8773b6c644ffd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc27a548c818ca93",
            "tags": {
              "Name": "shinjuku-final-ec201"
            },
            "tags_all": {
              "Name": "shinjuku-final-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b82ae1d94f2d579"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-0471e6059c97cf2e5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.shinjuku_instance_profile01",
            "aws_iam_role.shinjuku_ec2_role01",
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shinjuku_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-088b486f20fab3f0e",
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:instance/i-082f91f709ae43e7d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "shinjuku-final-instance-profile01",
            "id": "i-082f91f709ae43e7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b1665aa6ce8c529b"
              }
            ],
            "primary_network_interface_id": "eni-0b1665aa6ce8c529b",
            "private_dns": "ip-10-100-101-14.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.101.14",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03865cc7338e97574",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc27a548c818ca93",
            "tags": {
              "Name": "shinjuku-final-ec201-private"
            },
            "tags_all": {
              "Name": "shinjuku-final-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b82ae1d94f2d579"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-082f91f709ae43e7d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.shinjuku_instance_profile01",
            "aws_iam_role.shinjuku_ec2_role01",
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shinjuku_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:internet-gateway/igw-002918abe479efb78",
            "id": "igw-002918abe479efb78",
            "owner_id": "975598471165",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-igw01"
            },
            "tags_all": {
              "Name": "shinjuku-final-igw01"
            },
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shinjuku_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "shinjuku-final-alb-logs-975598471165",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:loadbalancer/app/shinjuku-final-alb01/69bd91fc20d9a734",
            "arn_suffix": "app/shinjuku-final-alb01/69bd91fc20d9a734",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shinjuku-final-alb01-1645860953.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:loadbalancer/app/shinjuku-final-alb01/69bd91fc20d9a734",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shinjuku-final-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0acbb6a01bd13be28"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01896031a79b39a85"
              },
              {
                "subnet_id": "subnet-0a3ec2949828b4162"
              }
            ],
            "subnets": [
              "subnet-01896031a79b39a85",
              "subnet-0a3ec2949828b4162"
            ],
            "tags": {
              "Name": "shinjuku-final-alb01"
            },
            "tags_all": {
              "Name": "shinjuku-final-alb01"
            },
            "vpc_id": "vpc-0b9de40ee844fa645",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:loadbalancer/app/shinjuku-final-alb01/69bd91fc20d9a734"
          },
          "dependencies": [
            "aws_s3_bucket.shinjuku_alb_logs_bucket01",
            "aws_security_group.shinjuku_alb_sg01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_caller_identity.shinjuku_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "shinjuku_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/15398fcc299ab1a2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/15398fcc299ab1a2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:loadbalancer/app/shinjuku-final-alb01/69bd91fc20d9a734",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/15398fcc299ab1a2"
          },
          "dependencies": [
            "aws_lb.shinjuku_alb01",
            "aws_lb_target_group.shinjuku_tg01",
            "aws_s3_bucket.shinjuku_alb_logs_bucket01",
            "aws_security_group.shinjuku_alb_sg01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_caller_identity.shinjuku_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "shinjuku_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:975598471165:certificate/914ddeec-0b91-4cb6-9e9d-0bed79f819d2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access Denied - Origin Header Required",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:loadbalancer/app/shinjuku-final-alb01/69bd91fc20d9a734",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc"
          },
          "dependencies": [
            "aws_acm_certificate.shinjuku_acm_cert01",
            "aws_acm_certificate_validation.shinjuku_acm_validation01_dns_bonus",
            "aws_lb.shinjuku_alb01",
            "aws_route53_record.shinjuku_acm_validation_records01",
            "aws_s3_bucket.shinjuku_alb_logs_bucket01",
            "aws_security_group.shinjuku_alb_sg01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_caller_identity.shinjuku_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "shinjuku_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener-rule/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc/fd353b9ddddd1eab",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener-rule/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc/fd353b9ddddd1eab",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc",
            "priority": 99,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener-rule/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc/fd353b9ddddd1eab"
          },
          "dependencies": [
            "aws_acm_certificate.shinjuku_acm_cert01",
            "aws_acm_certificate_validation.shinjuku_acm_validation01_dns_bonus",
            "aws_lb.shinjuku_alb01",
            "aws_lb_listener.shinjuku_https_listener01",
            "aws_route53_record.shinjuku_acm_validation_records01",
            "aws_s3_bucket.shinjuku_alb_logs_bucket01",
            "aws_security_group.shinjuku_alb_sg01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_caller_identity.shinjuku_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "shinjuku_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener-rule/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc/80e4ac454cbc4b76",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-shinjuku-Growl",
                    "regex_values": [],
                    "values": [
                      "D7gS1tEWjjS61jx1fXOySrAvJj7i28qP"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener-rule/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc/80e4ac454cbc4b76",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc",
            "priority": 1,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:listener-rule/app/shinjuku-final-alb01/69bd91fc20d9a734/2bf07c0a435e87bc/80e4ac454cbc4b76"
          },
          "dependencies": [
            "aws_acm_certificate.shinjuku_acm_cert01",
            "aws_acm_certificate_validation.shinjuku_acm_validation01_dns_bonus",
            "aws_lb.shinjuku_alb01",
            "aws_lb_listener.shinjuku_https_listener01",
            "aws_lb_target_group.shinjuku_tg01",
            "aws_route53_record.shinjuku_acm_validation_records01",
            "aws_s3_bucket.shinjuku_alb_logs_bucket01",
            "aws_security_group.shinjuku_alb_sg01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_caller_identity.shinjuku_self01",
            "random_password.shinjuku_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "shinjuku_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc",
            "arn_suffix": "targetgroup/shinjuku-final-tg01/813df654607557dc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:loadbalancer/app/shinjuku-final-alb01/69bd91fc20d9a734"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shinjuku-final-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shinjuku-final-tg01"
            },
            "tags_all": {
              "Name": "shinjuku-final-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "shinjuku_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc,i-082f91f709ae43e7d,80",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc",
            "target_id": "i-082f91f709ae43e7d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:975598471165:targetgroup/shinjuku-final-tg01/813df654607557dc",
            "target_id": "i-082f91f709ae43e7d"
          },
          "dependencies": [
            "aws_iam_instance_profile.shinjuku_instance_profile01",
            "aws_iam_role.shinjuku_ec2_role01",
            "aws_instance.shinjuku_ec201_private_bonus",
            "aws_lb_target_group.shinjuku_tg01",
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "shinjuku_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aebba8661d707e8",
            "association_id": "eipassoc-028f86f8f123baebd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07644fcd7e6b05aea",
            "network_interface_id": "eni-0fd79a7dbdecdf496",
            "private_ip": "10.100.1.62",
            "public_ip": "13.192.191.200",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a3ec2949828b4162",
            "tags": {
              "Name": "shinjuku-final-nat01"
            },
            "tags_all": {
              "Name": "shinjuku-final-nat01"
            },
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.shinjuku_nat_eip01",
            "aws_internet_gateway.shinjuku_igw01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shinjuku_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d70451d36e7a32b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07644fcd7e6b05aea",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d70451d36e7a32b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d70451d36e7a32b9"
          },
          "dependencies": [
            "aws_eip.shinjuku_nat_eip01",
            "aws_internet_gateway.shinjuku_igw01",
            "aws_nat_gateway.shinjuku_nat01",
            "aws_route_table.shinjuku_private_rt01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shinjuku_private_to_saopaulo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d70451d36e7a32b94252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d70451d36e7a32b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0372e6a6b4b4da24b",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d70451d36e7a32b9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.shinjuku_tgw01",
            "aws_ec2_transit_gateway_vpc_attachment.shinjuku_tgw_vpc_attach01",
            "aws_route_table.shinjuku_private_rt01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shinjuku_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002918abe479efb78",
            "id": "r-rtb-0ebbe09e8741a1d671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebbe09e8741a1d67",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebbe09e8741a1d67"
          },
          "dependencies": [
            "aws_internet_gateway.shinjuku_igw01",
            "aws_route_table.shinjuku_public_rt01",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shinjuku_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:route-table/rtb-0d70451d36e7a32b9",
            "id": "rtb-0d70451d36e7a32b9",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07644fcd7e6b05aea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.200.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0372e6a6b4b4da24b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shinjuku-final-private-rt01"
            },
            "tags_all": {
              "Name": "shinjuku-final-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-0d70451d36e7a32b9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shinjuku_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:route-table/rtb-0ebbe09e8741a1d67",
            "id": "rtb-0ebbe09e8741a1d67",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002918abe479efb78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shinjuku-final-public-rt01"
            },
            "tags_all": {
              "Name": "shinjuku-final-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-0ebbe09e8741a1d67",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shinjuku_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc1a360d3f83d978",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d70451d36e7a32b9",
            "subnet_id": "subnet-0fc27a548c818ca93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.shinjuku_private_rt01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc2c894bc3f69dad",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d70451d36e7a32b9",
            "subnet_id": "subnet-07b96d34b624cb5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.shinjuku_private_rt01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shinjuku_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1464ee0490d05c",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebbe09e8741a1d67",
            "subnet_id": "subnet-0a3ec2949828b4162"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.shinjuku_public_rt01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011dc761cd6b9ea8e",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebbe09e8741a1d67",
            "subnet_id": "subnet-01896031a79b39a85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.shinjuku_public_rt01",
            "aws_subnet.shinjuku_public_subnets",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shinjuku_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:security-group/sg-0acbb6a01bd13be28",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to target group (usually 80) to private network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acbb6a01bd13be28",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-58a04531"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shinjuku-final-alb-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shinjuku-final-alb-sg01"
            },
            "tags_all": {
              "Name": "shinjuku-final-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-0acbb6a01bd13be28",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shinjuku_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:security-group/sg-05b82ae1d94f2d579",
            "description": "EC2 app security group - inbound rules managed via separate rule resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b82ae1d94f2d579",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.184.18.128/32"
                ],
                "description": "SSH from admin IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0acbb6a01bd13be28"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shinjuku-final-ec2-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shinjuku-final-ec2-sg01"
            },
            "tags_all": {
              "Name": "shinjuku-final-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-05b82ae1d94f2d579",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shinjuku_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:security-group/sg-0f77e84c33db1c83f",
            "description": "RDS security group - MySQL inbound from Tokyo EC2 and Sao Paulo VPC CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f77e84c33db1c83f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Tokyo EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b82ae1d94f2d579"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "shinjuku-final-rds-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shinjuku-final-rds-sg01"
            },
            "tags_all": {
              "Name": "shinjuku-final-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-0f77e84c33db1c83f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shinjuku_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:security-group/sg-011279c06fd1d623b",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-011279c06fd1d623b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from EC2 SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b82ae1d94f2d579"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "shinjuku-final-vpce-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shinjuku-final-vpce-sg01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-011279c06fd1d623b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shinjuku_alb_ingress_cf44301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2609328376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-58a04531"
            ],
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0acbb6a01bd13be28",
            "security_group_rule_id": "sgr-037e6adf5462d79d9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shinjuku_alb_sg01",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_ec2_managed_prefix_list.shinjuku_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shinjuku_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1443953089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05b82ae1d94f2d579",
            "security_group_rule_id": "sgr-0718c78a5cedc7f43",
            "self": false,
            "source_security_group_id": "sg-0acbb6a01bd13be28",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shinjuku_alb_sg01",
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shinjuku_rds_ingress_from_saopaulo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.200.0.0/16"
            ],
            "description": "Allow MySQL from Sao Paulo VPC via TGW Lab 3A cross-region",
            "from_port": 3306,
            "id": "sgrule-176767296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f77e84c33db1c83f",
            "security_group_rule_id": "sgr-0815de11504745c25",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_security_group.shinjuku_rds_sg01",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shinjuku_vpce_sg01_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from EC2 SG",
            "from_port": 443,
            "id": "sgrule-3100816824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-011279c06fd1d623b",
            "security_group_rule_id": "sgr-056618bbb9b169df2",
            "self": false,
            "source_security_group_id": "sg-05b82ae1d94f2d579",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shinjuku_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:subnet/subnet-0fc27a548c818ca93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc27a548c818ca93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-private-subnet01"
            },
            "tags_all": {
              "Name": "shinjuku-final-private-subnet01"
            },
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-0fc27a548c818ca93",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:subnet/subnet-07b96d34b624cb5df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b96d34b624cb5df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-private-subnet02"
            },
            "tags_all": {
              "Name": "shinjuku-final-private-subnet02"
            },
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-07b96d34b624cb5df",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shinjuku_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:subnet/subnet-0a3ec2949828b4162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3ec2949828b4162",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-public-subnet01"
            },
            "tags_all": {
              "Name": "shinjuku-final-public-subnet01"
            },
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-0a3ec2949828b4162",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:subnet/subnet-01896031a79b39a85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01896031a79b39a85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-public-subnet02"
            },
            "tags_all": {
              "Name": "shinjuku-final-public-subnet02"
            },
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-01896031a79b39a85",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shinjuku_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc/vpc-0b9de40ee844fa645",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0addc58a19d0c5257",
            "default_route_table_id": "rtb-0782d36adc46edf28",
            "default_security_group_id": "sg-00e7957f804266a27",
            "dhcp_options_id": "dopt-0c1c19f00d5e80f33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9de40ee844fa645",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0782d36adc46edf28",
            "owner_id": "975598471165",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "shinjuku-final-vpc01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpc-0b9de40ee844fa645",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-0d869e0f57958b991",
            "dns_entry": [
              {
                "dns_name": "vpce-0d869e0f57958b991-k1zc8tdv.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d869e0f57958b991-k1zc8tdv-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d869e0f57958b991-k1zc8tdv-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0074531204RVXUDYC5G1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d869e0f57958b991",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a9913cf8f0212c24",
              "eni-0e23447af6dd6c699"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-011279c06fd1d623b"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.101.91",
                "subnet_id": "subnet-0fc27a548c818ca93"
              },
              {
                "ipv4": "10.100.102.201",
                "subnet_id": "subnet-07b96d34b624cb5df"
              }
            ],
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-final-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0d869e0f57958b991",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-0785ca5f4bcda0a66",
            "dns_entry": [
              {
                "dns_name": "vpce-0785ca5f4bcda0a66-nvdvfn9j.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0785ca5f4bcda0a66-nvdvfn9j-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0785ca5f4bcda0a66-nvdvfn9j-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00042852SKRQX1WEWNVW"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z000428733LRKA1D734MG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0785ca5f4bcda0a66",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-035002c328d347ab2",
              "eni-0d162335d6fd25b80"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-011279c06fd1d623b"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.101.212",
                "subnet_id": "subnet-0fc27a548c818ca93"
              },
              {
                "ipv4": "10.100.102.56",
                "subnet_id": "subnet-07b96d34b624cb5df"
              }
            ],
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-final-vpce-kms01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0785ca5f4bcda0a66",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-095cde5e97d87ced4",
            "dns_entry": [
              {
                "dns_name": "vpce-095cde5e97d87ced4-zk54lbzn.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-095cde5e97d87ced4-zk54lbzn-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-095cde5e97d87ced4-zk54lbzn-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05591893LFXMINW9A9CD"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z000429923XCUKULDOOR1"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0075032SKMJ4REPNFEA"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z00043183EJZLAQ0SFU2W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-095cde5e97d87ced4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-028d8f33ebb044bf0",
              "eni-09b6c712b1fc5fcbc"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-011279c06fd1d623b"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.101.137",
                "subnet_id": "subnet-0fc27a548c818ca93"
              },
              {
                "ipv4": "10.100.102.97",
                "subnet_id": "subnet-07b96d34b624cb5df"
              }
            ],
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-final-vpce-logs01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-095cde5e97d87ced4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-08a2d486df47c0d7a",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08a2d486df47c0d7a",
            "ip_address_type": "ipv4",
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d70451d36e7a32b9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "shinjuku-final-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-08a2d486df47c0d7a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.shinjuku_private_rt01",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-0d3a897d4cdf51f34",
            "dns_entry": [
              {
                "dns_name": "vpce-0d3a897d4cdf51f34-9mbjcyhe.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3a897d4cdf51f34-9mbjcyhe-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3a897d4cdf51f34-9mbjcyhe-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z027095831SLR1I9KKO83"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d3a897d4cdf51f34",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07dc5ee959bb5c0ab",
              "eni-0ddd0dc55c4d1e35a"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-011279c06fd1d623b"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.101.34",
                "subnet_id": "subnet-0fc27a548c818ca93"
              },
              {
                "ipv4": "10.100.102.200",
                "subnet_id": "subnet-07b96d34b624cb5df"
              }
            ],
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-final-vpce-secrets01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0d3a897d4cdf51f34",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-0444ff9409ec375ee",
            "dns_entry": [
              {
                "dns_name": "vpce-0444ff9409ec375ee-ig1pzgjc.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0444ff9409ec375ee-ig1pzgjc-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0444ff9409ec375ee-ig1pzgjc-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02779151SCDZWPAQ60TR"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z005496422K9HEKVS4SN5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0444ff9409ec375ee",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-046bf046c1eef3b5b",
              "eni-09348f9373dc42491"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-011279c06fd1d623b"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.101.84",
                "subnet_id": "subnet-0fc27a548c818ca93"
              },
              {
                "ipv4": "10.100.102.85",
                "subnet_id": "subnet-07b96d34b624cb5df"
              }
            ],
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-final-vpce-ssm01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0444ff9409ec375ee",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "shinjuku_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:vpc-endpoint/vpce-0c78e091ce5ce96c5",
            "dns_entry": [
              {
                "dns_name": "vpce-0c78e091ce5ce96c5-z6xzimck.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c78e091ce5ce96c5-z6xzimck-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c78e091ce5ce96c5-z6xzimck-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05599231LQCF7ISA1XZL"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02710282UT3DX4JAKKX6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c78e091ce5ce96c5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0630321bd07d4d0c5",
              "eni-0c949cdd693650a13"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-011279c06fd1d623b"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.101.235",
                "subnet_id": "subnet-0fc27a548c818ca93"
              },
              {
                "ipv4": "10.100.102.228",
                "subnet_id": "subnet-07b96d34b624cb5df"
              }
            ],
            "subnet_ids": [
              "subnet-07b96d34b624cb5df",
              "subnet-0fc27a548c818ca93"
            ],
            "tags": {
              "Name": "shinjuku-final-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "shinjuku-final-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b9de40ee844fa645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0c78e091ce5ce96c5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_vpce_sg01",
            "aws_subnet.shinjuku_private_subnets",
            "aws_vpc.shinjuku_vpc01",
            "data.aws_region.shinjuku_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:975598471165:security-group-rule/sgr-0796c311e4cdae2bd",
            "cidr_ipv4": "99.184.18.128/32",
            "cidr_ipv6": null,
            "description": "SSH from admin IP only",
            "from_port": 22,
            "id": "sgr-0796c311e4cdae2bd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-05b82ae1d94f2d579",
            "security_group_rule_id": "sgr-0796c311e4cdae2bd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sgr-0796c311e4cdae2bd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.shinjuku_ec2_sg01",
            "aws_vpc.shinjuku_vpc01"
          ]
        }
      ]
    }
  ]
}